# kata-database-change-data-capture

./: .env.sample  .gitignore  ARCHITECTURE.md  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml
.local/postgres/: init.sql
alembic/: env.py
alembic/versions/: ef0c6c6335ef_initial_schema.py
scripts/: register-postgres-connector.sh  start.sh
src/: diff.py  list_azurite.py  restore.py
src/kata_cdc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/simulator/: Dockerfile  simulate.py
src/sink/: Dockerfile  consumer.py
