[project]
name = "kata-cdc"
version = "0.1.0"
description = "CDC (Change Data Capture) kata with Debezium, Kafka, and PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "kafka-python==2.0.2",
    "azure-storage-blob==12.19.0",
    "psycopg2-binary==2.9.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.task]
